--- a/vitamio/res/layout/mediacontroller.xml
+++ b/vitamio/res/layout/mediacontroller.xml
@@ -7,15 +7,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:layout_height="wrap_content">
 
         <ImageButton
             android:id="@+id/mediacontroller_play_pause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
             android:background="@drawable/mediacontroller_button"
             android:contentDescription="@string/mediacontroller_play_pause"
             android:src="@drawable/mediacontroller_pause" />
@@ -26,28 +24,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/mediacontroller_play_pause" />
 
+        <ImageButton
+            android:id="@+id/id_zoom_in"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/zoom_in_selector" />
         <TextView
             android:id="@+id/mediacontroller_time_total"
             style="@style/MediaController_Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/id_zoom_in"
             android:layout_marginRight="5dp" />
 
         <SeekBar
             android:id="@+id/mediacontroller_seekbar"
             style="@style/MediaController_SeekBar"
-            android:layout_width="match_parent"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/mediacontroller_time_total"
-            android:layout_toRightOf="@id/mediacontroller_time_current"
+            android:layout_toRightOf="@+id/mediacontroller_time_current"
             android:focusable="true"
             android:max="1000" />
+
     </RelativeLayout>
 
     <TextView
