--- a/vitamio/res/values/styles.xml
+++ b/vitamio/res/values/styles.xml
@@ -15,8 +15,8 @@
 
     <style name="MediaController_Text">
         <item name="android:textColor">#ffffffff</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
 </resources>
