--- a/vitamio/res/layout/mediacontroller.xml
+++ b/vitamio/res/layout/mediacontroller.xml
@@ -32,14 +32,15 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:background="@drawable/zoom_in_selector" />
+
         <TextView
             android:id="@+id/mediacontroller_time_total"
             style="@style/MediaController_Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/id_zoom_in"
-            android:layout_marginRight="5dp" />
+            android:layout_marginRight="5dp"
+            android:layout_toLeftOf="@id/id_zoom_in" />
 
         <SeekBar
             android:id="@+id/mediacontroller_seekbar"
