--- a/vitamio/res/values/colors.xml
+++ b/vitamio/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="transparent">#00000000</color>
     <color name="mediacontroller_bg_pressed">#ff53c1bd</color>
     <color name="mediacontroller_bg">#99000000</color>
-
+    <color name="background_grey">#99585757</color>
+    <color name="white">#FFFFFF</color>
 </resources>
