--- a/vitamio/res/layout/my_media_controller.xml
+++ b/vitamio/res/layout/my_media_controller.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -29,7 +30,7 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:layout_alignParentRight="true"
-            android:text="10:58"
+            tools:text="10:58"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
             android:textColor="@color/white"/>
@@ -42,12 +43,13 @@
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"/>
         <TextView
+            android:id="@+id/id_controller_text_battery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/id_controller_img_battery"
             android:layout_marginRight="10dp"
             android:textSize="14sp"
-            android:text="78%"
+            tools:text="78%"
             android:textColor="@color/white"
             android:layout_centerVertical="true"/>
     </RelativeLayout>
