--- a/EasyPlayer/src/main/res/values/colors.xml
+++ b/EasyPlayer/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="plugin_video_quality_background">#212121</color>
+    <color name="plugin_video_quality_line">#666666</color>
+    <color name="plugin_video_quality_text_select">#2FB3FF</color>
+
 </resources>
