--- a/EasyPlayer/src/main/res/layout/fullscreen_play_layout.xml
+++ b/EasyPlayer/src/main/res/layout/fullscreen_play_layout.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <io.vov.vitamio.widget.VideoView
-        android:id="@+id/id_video_view"
+        android:id="@+id/id_fullscreen_video_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-</LinearLayout>
-
+    <include layout="@layout/volume_brightness_layout"/>
+</RelativeLayout>
