--- a/EasyPlayer/src/main/res/layout/easy_media_controller.xml
+++ b/EasyPlayer/src/main/res/layout/easy_media_controller.xml
@@ -2,8 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <include layout="@layout/volume_brightness_layout"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -68,68 +70,6 @@
             android:layout_centerVertical="true"/>
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
-        <ImageView
-            android:id="@+id/id_controller_img_brightness"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/brightness_full"
-            android:visibility="gone"/>
-        <TextView
-            android:id="@+id/id_controller_text_brightness"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/id_controller_img_brightness"
-            tools:text="88%"
-            android:layout_centerInParent="true"
-            android:textSize="14sp"
-            android:textColor="@color/white"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
-        <ImageView
-            android:id="@+id/id_controller_img_fast_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/fast_back"
-            android:visibility="gone"/>
-        <ImageView
-            android:id="@+id/id_controller_img_fast_forward"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/fast_forward"
-            android:visibility="gone"/>
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
-        <ImageView
-            android:id="@+id/id_controller_img_volume"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/volume_10"
-            android:visibility="gone"/>
-        <TextView
-            android:id="@+id/id_controller_text_volume"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/id_controller_img_volume"
-            tools:text="88%"
-            android:layout_centerInParent="true"
-            android:textSize="14sp"
-            android:textColor="@color/white"/>
-    </RelativeLayout>
-
-
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -187,6 +127,5 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:max="1000" />
-
     </RelativeLayout>
 </RelativeLayout>
