--- a/EasyPlayer/src/main/res/layout/fullscreen_play_layout.xml
+++ b/EasyPlayer/src/main/res/layout/fullscreen_play_layout.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <io.vov.vitamio.widget.VideoView
         android:id="@+id/id_fullscreen_video_view"
@@ -14,4 +12,6 @@
         android:layout_alignParentStart="true" />
 
     <include layout="@layout/volume_brightness_layout"/>
+
+
 </RelativeLayout>
