update plugin forward

--- a/EasyPlayer/src/main/res/layout/easy_media_controller.xml
+++ b/EasyPlayer/src/main/res/layout/easy_media_controller.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <include layout="@layout/volume_brightness_layout"/>
+    <include layout="@layout/forward_back_layout"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
