--- a/EasyPlayer/src/main/res/layout/fullscreen_play_layout.xml
+++ b/EasyPlayer/src/main/res/layout/fullscreen_play_layout.xml
@@ -12,6 +12,6 @@
         android:layout_alignParentStart="true" />
 
     <include layout="@layout/volume_brightness_layout"/>
-
+    <include layout="@layout/forward_back_layout"/>
 
 </RelativeLayout>
