--- a/EasyPlayer/src/main/res/values/styles.xml
+++ b/EasyPlayer/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="dialog" parent="@android:style/Theme.Material.Dialog.Alert">
+    <style name="dialog" parent="@style/Theme.AppCompat.Dialog.Alert">
         <item name="android:windowFrame">@null</item><!--边框-->
         <item name="android:windowIsFloating">true</item><!--是否浮现在activity之上-->
         <item name="android:windowIsTranslucent">false</item><!--半透明-->
