--- a/EasyPlayer/src/main/res/layout/local_video_layout.xml
+++ b/EasyPlayer/src/main/res/layout/local_video_layout.xml
@@ -11,6 +11,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:divider="@color/background_grey"
+        android:dividerHeight="1dp"
         />
 
 </RelativeLayout>
