--- a/EasyPlayer/src/main/res/layout/volume_brightness_layout.xml
+++ b/EasyPlayer/src/main/res/layout/volume_brightness_layout.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/id_vb_layout_brightness"
@@ -15,17 +14,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/video_brightness_bg"/>
-        <TextView
-            android:id="@+id/id_vb_text_brightness"
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_below="@id/id_vb_image_brightness"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:layout_marginTop="5dp"
-            tools:text="16%"
-            android:layout_centerInParent="true"/>
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/id_vb_image_brightness">
+            <ImageView
+                android:id="@+id/id_vb_image_brightness_bg"
+                android:layout_width="94dp"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/video_num_bg"/>
+            <ImageView
+                android:id="@+id/id_vb_image_brightness_front"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:scaleType="matrix"
+                android:src="@mipmap/video_num_front"/>
+        </FrameLayout>
+
     </RelativeLayout>
     <RelativeLayout
         android:id="@+id/id_vb_layout_volume"
@@ -38,17 +44,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/video_volumn_bg"/>
-        <TextView
-            android:id="@+id/id_vb_text_volume"
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_below="@id/id_vb_image_volume"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:layout_marginTop="5dp"
-            tools:text="16%"
-            android:layout_centerInParent="true"/>
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/id_vb_image_volume">
+            <ImageView
+                android:id="@+id/id_vb_image_volume_bg"
+                android:layout_width="94dp"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/video_num_bg"/>
+            <ImageView
+                android:id="@+id/id_vb_image_volume_front"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:scaleType="matrix"
+                android:src="@mipmap/video_num_front"/>
+        </FrameLayout>
+
     </RelativeLayout>
 
 
