--- a/EasyPlayer/src/main/res/layout/easy_media_controller.xml
+++ b/EasyPlayer/src/main/res/layout/easy_media_controller.xml
@@ -6,7 +6,7 @@
 
     <include layout="@layout/volume_brightness_layout"/>
     <include layout="@layout/forward_back_layout"/>
-
+    <include layout="@layout/plugin_lock_layout"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
